<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BambooFinder</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="EmailHint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="Login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_main">Main Screen</string>
    <string name="MyObservations">My Observations</string>
    <string name="ViewMap">View Map</string>
    <string name="LearnMore">Learn More</string>
    <string name="action_add">Add Observation</string>
    <string name="action_filter">Filter Results</string>
    <string name="new_picture">New Picture</string>
    <string name="search_filter_ok">OK</string>
    <string name="search_filter_cancel">Cancel</string>
    <string name="logout">Logout</string>

    <string name="title_activity_interactive_map">Interactive Map</string>
    <string name="title_activity_observation_detail">Edit Observation</string>
    <string name="title_activity_observation_list">My Observations</string>
    <string name="title_activity_educational">EducationalActivity</string>
    <string name="title_activity_species_detail">SpeciesDetailActivity</string>


    <string name="new_observation">New Observation</string>
    <string name="delete_observation">Delete Observation</string>

    <string name="SpeciesHint">Species Name...</string>
    <string name="ObservationPicture">Observation Picture</string>
    <string name="DescriptionText">Description...</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="Validate">Validate</string>

    <string name="educational_info_text_0">
        Bamboo is an efficient resource with many uses.
    </string>

    <string name="educational_info_text_1">
        Bamboo is the fastest growing plant on the earth!
    </string>

    <string name="educational_info_text_2">
        Bamboo has a higher tensile strength than steel!
    </string>

    <string name="educational_info_text_3">
        Guess what? You can even eat bamboo!
    </string>

    <string name="educational_info_text_4">
        Bamboo is one of nature\'s best erosion control agent!
    </string>

    <string name="educational_info_text_5">
        Visit www.blackbeltbamboost.org for more information!
    </string>

    <string name="species_detail_button">Species Information</string>
    <string name="species_select">Select a species</string>
    <string name="genus_select">Select a genus</string>
    <string name="species_generate_detail">Generate information</string>
    <string name="search_hint">Search for bamboo</string>

    <string name="title_activity_search_filter">Search Filter</string>
    <string name="within_radius">Within radius (in meters)</string>
    <string name="added_after">Added on or after:</string>
    <string name="show_observations">Only show observations</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_searchable">SearchableActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="own_observations">That are mine</string>
    <string name="title_activity_maps">Map</string>

</resources>
