<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.alabama.bamboofinder.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MyObservations"
        android:id="@+id/MyObservationsButton"
        android:layout_marginTop="111dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/LearnButton"
        android:layout_alignEnd="@+id/LearnButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ViewMap"
        android:id="@+id/ViewMapButton"
        android:layout_below="@+id/MyObservationsButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/MyObservationsButton"
        android:layout_alignEnd="@+id/MyObservationsButton"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LearnMore"
        android:id="@+id/LearnButton"
        android:layout_below="@+id/ViewMapButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:id="@+id/MainLoginButton"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/LearnButton"
        android:layout_alignStart="@+id/LearnButton"
        android:layout_alignRight="@+id/LearnButton"
        android:layout_alignEnd="@+id/LearnButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loggedInText"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="30dp"
        android:layout_marginTop="25dp" />
</RelativeLayout>
