<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.alabama.bamboofinder.LoginActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/EmailText"
        android:autoText="false"
        android:editable="false"
        android:enabled="true"
        android:singleLine="false"
        android:background="@drawable/text_border"
        android:padding="6dp"
        android:layout_marginTop="55dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/EmailHint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/PasswordText"
        android:autoText="false"
        android:editable="false"
        android:enabled="true"
        android:singleLine="false"
        android:background="@drawable/text_border"
        android:padding="6dp"
        android:layout_marginTop="38dp"
        android:hint="@string/password_hint"
        android:password="false"
        android:inputType="textPassword"
        android:layout_below="@+id/EmailText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:id="@+id/loginButton"
        android:layout_below="@+id/PasswordText"
        android:layout_marginTop="38dp"
        android:layout_alignLeft="@+id/newAccountButton"
        android:layout_alignStart="@+id/newAccountButton"
        android:layout_alignRight="@+id/newAccountButton"
        android:layout_alignEnd="@+id/newAccountButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:id="@+id/newAccountButton"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
